templates/generic-http-tpl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-<intergation_id>
  namespace: tenant-<tenant_id>
  annotations:
    tenant: <tenant_id>
    collector: <intergation_id>
    type: http
spec:
  selector:
    app: http-<intergation_id>
  ports:
  - port: 8080
    targetPort: 8080
